--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<div class="contenedor"><br><br>
 				<h1 class="titulo">Catálogo 2022</h1>
 				<h2></h2><br>
-				<img src="img/QR flores 18.png" height="80px" alt=""srcset="">
+				<!-- <img src="img/QR flores 18.png" height="80px" alt=""srcset=""> -->
 				<p class="descripcion"></p>
 				<!-- <button role="button" class="boton"><i class="fas fa-play"></i>Reproducir</button> -->
 		
