--- a/catalogo.html
+++ b/catalogo.html
@@ -18,7 +18,7 @@
 			<div class="contenedor">
 				<img src="img/1.1.png" height="150px"
 				alt=""srcset="">
-				<h2 class="logotipo">Catálogo</h2>
+				<h2 class="logotipo"></h2>
 				<nav>
 					<a href="index.html" class="activo">Inicio</a>
 					<a href="">Catálogo</a>
